<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.rc.inventory.activity.MainActivity">


    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/main_activity_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnStartInventoryButtonClick"
            android:padding="40dp"
            android:text="@string/main_activity_start_inventory" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_activity_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ProgressBar
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_loading_msg"
            android:textColor="@color/colorTextPrimary"
            android:textSize="10pt"/>

    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/main_activity_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_error_msg"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10pt"/>

</RelativeLayout>
