<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inventory_final_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOuterBackground"
    tools:context="org.rc.inventory.activity.InventoryFinalOverviewActivity">

    <LinearLayout
        android:layout_width="@dimen/layout_dimension_width"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <include layout="@layout/layout_tool_bar" />

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/list_item_margin_top_bottom"
                    android:paddingLeft="@dimen/list_item_margin_left_right"
                    android:paddingRight="@dimen/list_item_margin_left_right"
                    android:paddingTop="@dimen/list_item_margin_top_bottom">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/set_user_data_header"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="15pt" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/list_item_margin_top_bottom"
                        android:paddingTop="@dimen/list_item_margin_top_bottom">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_user_data_name"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="@dimen/list_item_content_text_size" />

                        <EditText
                            android:id="@+id/set_user_data_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/set_user_data_name_hint"
                            android:singleLine="true"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="8pt" />
                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:onClick="onBackButtonClick"
                        android:padding="10dp"
                        android:text="@string/button_back"
                        android:textColor="@color/colorTextButton" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:onClick="onSendButtonClick"
                        android:padding="10dp"
                        android:text="@string/button_send"
                        android:textColor="@color/colorTextButton" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>