<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="inventoryItem"
            type="org.rc.inventory.model.InventoryItemModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOuterBackground"
        android:orientation="vertical">

        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:soundEffectsEnabled="false"
            android:layout_width="@dimen/layout_dimension_width"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <include layout="@layout/layout_tool_bar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/test_anim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="hideKeyboardOnClick"
                    android:orientation="vertical"
                    android:soundEffectsEnabled="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <!-- Material -->
                            <LinearLayout
                                android:padding="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@color/colorBackground"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/process_item_material"
                                    android:textColor="@color/colorTextSecondary"
                                    android:textSize="@dimen/list_item_content_text_size" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@{inventoryItem.name}"
                                    android:textColor="@color/colorTextPrimary"
                                    android:textSize="8pt" />
                            </LinearLayout>


                            <!-- Container Location -->
                            <LinearLayout
                                android:padding="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@color/colorBackground"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:paddingRight="@dimen/process_item_margin_top_bottom">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/process_item_container_location"
                                        android:textColor="@color/colorTextSecondary"
                                        android:textSize="@dimen/list_item_content_text_size" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@{inventoryItem.containerLocation}"
                                        android:textColor="@color/colorTextPrimary"
                                        android:textSize="8pt" />

                                    <ImageView
                                        android:visibility="gone"
                                        android:id="@+id/inventory_process_items_location_image_big"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:onClick="onBigImageClick"/>

                                </LinearLayout>

                                <ImageView
                                    android:onClick="onSmallImageClick"
                                    android:id="@+id/inventory_process_items_location_image_small"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                            </LinearLayout>

                            <LinearLayout
                                android:padding="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@color/colorBackground"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <!-- Missing Units -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:layout_marginRight="@dimen/process_item_margin_top_bottom">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/process_item_missing"
                                        android:textColor="@color/colorTextSecondary"
                                        android:textSize="@dimen/list_item_content_text_size" />

                                    <EditText
                                        android:selectAllOnFocus="true"
                                        android:id="@+id/inventory_process_items_missing"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/process_item_missing_hint"
                                        android:inputType="numberSigned"
                                        android:padding="5dp"
                                        android:text="@{inventoryItem.amountMissing}"
                                        android:textColor="@color/colorTextPrimary"
                                        android:textSize="8pt" />

                                </LinearLayout>

                                <!-- Required Amount -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:layout_marginLeft="@dimen/process_item_margin_top_bottom">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/process_item_amount_required"
                                        android:textColor="@color/colorTextSecondary"
                                        android:textSize="@dimen/list_item_content_text_size" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@{inventoryItem.amountRequired}"
                                        android:textColor="@color/colorTextPrimary"
                                        android:textSize="8pt" />
                                </LinearLayout>

                            </LinearLayout>


                            <LinearLayout
                                android:padding="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@color/colorBackground"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">


                                <!-- Items to be Changed -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:layout_marginRight="@dimen/process_item_margin_top_bottom">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/process_item_to_be_replaced"
                                        android:textColor="@color/colorTextSecondary"
                                        android:textSize="@dimen/list_item_content_text_size" />

                                    <EditText
                                        android:selectAllOnFocus="true"
                                        android:id="@+id/inventory_process_items_to_be_changed"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/process_item_to_be_replaced_hint"
                                        android:inputType="numberSigned"
                                        android:padding="5dp"
                                        android:text="@{inventoryItem.amountToBeChanged}"
                                        android:textColor="@color/colorTextPrimary"
                                        android:textSize="8pt" />
                                </LinearLayout>

                                <!-- Expiration Date -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:layout_marginLeft="@dimen/process_item_margin_top_bottom">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/process_item_expiration_date"
                                        android:textColor="@color/colorTextSecondary"
                                        android:textSize="@dimen/list_item_content_text_size" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@{inventoryItem.expirationDateString}"
                                        android:textColor="@color/colorTextPrimary"
                                        android:textSize="8pt" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_style"
                            android:onClick="onBackButtonClick"
                            android:padding="10dp"
                            android:text="@string/button_back"
                            android:textColor="@color/colorTextButton" />

                        <Button
                            android:id="@+id/process_items_next_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_style"
                            android:onClick="onNextButtonClick"
                            android:padding="10dp"
                            android:text="@string/button_next"
                            android:textColor="@color/colorTextButton" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </RelativeLayout>
</layout>